After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 625437 - Warnings on x86-64
Warnings on x86-64
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
Git master
Other Linux
: Normal trivial
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2010-07-27 21:22 UTC by Simon van der Linden
Modified: 2010-08-12 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix some warnings (2.19 KB, patch)
2010-08-12 12:14 UTC, Simon van der Linden
committed Details | Review

Description Simon van der Linden 2010-07-27 21:22:06 UTC
gio.override: In function 'pygio_notify_allocate_buffer':
gio.override:144:13: warning: format '%d' expects type 'int', but argument 3 has type 'gsize'

pygi-struct.c: In function '_struct_new':
pygi-struct.c:59:14: warning: unused variable 'is_simple'

pygi-argument.c: In function '_pygi_g_type_info_check_object':
pygi-argument.c:254:18: warning: unused variable 'is_instance'
Comment 1 Simon van der Linden 2010-08-12 12:14:15 UTC
The following fix has been pushed:
769645e Fix some warnings

The two other warnings had gone meanwhile.
Comment 2 Simon van der Linden 2010-08-12 12:14:18 UTC
Created attachment 167722 [details] [review]
Fix some warnings

pyglib.c: In function ‘pyglib_gerror_exception_check’:
pyglib.c:362: warning: format not a string literal and no format arguments
pyglib.c:371: warning: format not a string literal and no format arguments

gio.override: In function 'pygio_notify_allocate_buffer':
gio.override:144:13: warning: format '%d' expects type 'int', but argument 3
has type 'gsize'