Fix some warnings

pyglib.c: In function ‘pyglib_gerror_exception_check’:
pyglib.c:362: warning: format not a string literal and no format arguments
pyglib.c:371: warning: format not a string literal and no format arguments

gio.override: In function 'pygio_notify_allocate_buffer':
gio.override:144:13: warning: format '%d' expects type 'int', but argument 3
has type 'gsize'

https://bugzilla.gnome.org/show_bug.cgi?id=625437